@@ -118,7 +118,6 @@ private:
     int m_redirectionTimer;
     
     KURL m_baseURL;
-    QString m_documentSource;
     bool m_decodingStarted;
     
     friend class KHTMLPart;
